--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "nodemailer": "^1.8.0",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "method-override": "~1.0.0",
+    "connect-flash" : "~0.1.1",     
+    "bcrypt-nodejs" : "latest"
   }
 }
