--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "jade": "~1.11.0",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
-    "nodemailer": "^1.8.0",
+    "nodemailer": "0.7.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "method-override": "~1.0.0",
-    "connect-flash" : "~0.1.1",     
+    "connect-flash" : "~0.1.1",
     "bcrypt-nodejs" : "latest"
   }
 }
