--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "4.2.2"
+  },
   "dependencies": {
     "async": "^1.5.0",
     "bcrypt-nodejs": "latest",
