--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serve-favicon": "~2.3.0",
     "method-override": "~1.0.0",
     "connect-flash" : "~0.1.1",
-    "bcrypt-nodejs" : "latest"
+    "bcrypt-nodejs" : "latest",
+    "voxbone-webrtc": "~0.0.8"
   }
 }
