--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "nodemailer": "0.7.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
+    "request": "^2.65.0",
     "serve-favicon": "~2.3.0",
-    "method-override": "~1.0.0",
-    "connect-flash" : "~0.1.1",
-    "bcrypt-nodejs" : "latest",
     "voxbone-webrtc": "~0.0.8"
   }
 }
