--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "~1.0.0",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
+    "newrelic": "^1.24.0",
     "nodemailer": "0.7.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
