--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.13.2",
     "clipboard": "^1.5.3",
     "connect-flash": "~0.1.1",
+    "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
