--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "request": "^2.65.0",
+    "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
     "voxbone-webrtc": "0.0.9"
   }
