--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.13.2",
     "clipboard": "^1.5.3",
+    "coffee-script": "^1.10.0",
     "connect-flash": "~0.1.1",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.3.5",
@@ -21,12 +22,13 @@
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "method-override": "~1.0.0",
-    "mongoose": "^4.2.3",
+    "mongoose": "^3.8.23",
     "morgan": "~1.6.1",
     "newrelic": "^1.24.0",
     "nodemailer": "0.7.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
+    "penguin": "^0.3.5",
     "request": "^2.65.0",
     "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
