--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "method-override": "~1.0.0",
-    "mongoose": "^3.8.23",
+    "mongoose": "~3.8.0",
     "morgan": "~1.6.1",
     "newrelic": "^1.24.0",
     "nodemailer": "0.7.0",
