--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.25.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "engines": {
     "node": "4.2.3"
@@ -26,6 +26,7 @@
     "morgan": "~1.6.1",
     "newrelic": "^1.24.0",
     "nodemailer": "0.7.0",
+    "nodemon": "^1.9.1",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "penguin": "^0.3.5",
