--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# excluding bower related directories
+bower_components
+public/lib
+
 #Gedit temp files
 *~
 
