[MISC] Adjusting bower to be installed on heroku

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.25.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "engines": {
     "node": "4.2.3"
@@ -12,6 +13,7 @@
     "async": "^1.5.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.13.2",
+    "bower": "^1.7.9",
     "clipboard": "^1.5.3",
     "coffee-script": "^1.10.0",
     "connect-flash": "~0.1.1",
@@ -37,7 +39,6 @@
     "voxbone-webrtc": "0.0.9"
   },
   "devDependencies": {
-    "bower": "^1.7.9",
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-bower-task": "^0.4.0"
