--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
+    "grunt": "^1.0.1",
+    "grunt-bower-requirejs": "^2.0.0",
     "jade": "~1.11.0",
     "method-override": "~1.0.0",
     "mongoose": "~3.8.0",
