--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "penguin": "^0.3.5",
+    "repl": "^0.1.3",
     "request": "^2.65.0",
     "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
