--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.12.1",
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
+    "grunt-nodemon": "^0.4.2",
     "jade": "~1.11.0",
     "method-override": "~1.0.0",
     "mongoose": "~3.8.0",
@@ -44,6 +45,10 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
-    "grunt-bower-task": "^0.4.0"
+    "grunt-bower-task": "^0.4.0",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "jit-grunt": "^0.10.0"
   }
 }
