--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-recaptcha": "^2.0.0",
     "express-session": "^1.12.1",
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
