--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "request": "^2.65.0",
     "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
+    "strong-params": "^0.6.0",
     "voxbone-webrtc": "0.0.9"
   },
   "devDependencies": {
