--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "jit-grunt": "^0.10.0"
   }
