[#348] Show text not saved on initial save fix. Also some tests (#357)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "postinstall": "bower cache clean && bower install",
     "test": "grunt simplemocha",
-    "prepush": "npm test"
+    "prepush": "npm test && grunt nightwatch"
   },
   "engines": {
     "node": "4.4.7"
