--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-nodemon": "^0.4.2",
+    "honeybadger": "^1.1.3",
     "jade": "~1.11.0",
     "lodash": "^4.14.2",
     "method-override": "~1.0.0",
