--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "newrelic": "^1.24.0",
     "nodemon": "^1.9.1",
     "passport": "^0.3.0",
+    "passport-github2": "^0.1.10",
+    "passport-google-oauth": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.4.1",
     "passport-local": "^1.0.0",
+    "passport-windowslive": "^1.0.2",
     "repl": "^0.1.3",
     "request": "^2.65.0",
     "sendgrid": "^2.0.0",
