--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "raty": "2.7.0",
     "clipboard": "1.5.5",
     "requirejs": "^2.2.0",
-    "angular-recaptcha": "^3.0.3"
+    "angular-recaptcha": "^3.0.3",
+    "domReady": "^2.0.1"
   }
 }
