--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clipboard": "^1.5.3",
     "coffee-script": "^1.10.0",
     "connect-flash": "~0.1.1",
-    "connect-mongodb-session": "^1.1.1",
+    "connect-mongo": "^1.3.2",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
