--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "clipboard": "1.5.5",
     "requirejs": "^2.2.0",
     "angular-recaptcha": "^3.0.3",
-    "domReady": "^2.0.1"
+    "domReady": "^2.0.1",
+    "angular-bootstrap-colorpicker": "^3.0.25"
   }
 }
