--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "passport-google-oauth": "^1.0.0",
     "passport-linkedin-oauth2": "^1.4.1",
     "passport-local": "^1.0.0",
+    "passport-oauth": "^1.0.0",
     "passport-windowslive": "^1.0.2",
     "repl": "^0.1.3",
     "request": "^2.65.0",
+    "requestify": "^0.2.3",
     "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
     "strong-params": "^0.6.0",
