--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-nodemon": "^0.4.2",
     "honeybadger": "^1.1.3",
-    "jade": "~1.11.0",
     "lodash": "^4.14.2",
     "method-override": "~1.0.0",
     "moment": "^2.14.1",
@@ -46,6 +45,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-windowslive": "^1.0.2",
+    "pug": "latest",
     "repl": "^0.1.3",
     "request": "^2.65.0",
     "requestify": "^0.2.3",
