--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "method-override": "~1.0.0",
     "moment": "^2.14.1",
     "mongoose": "~4.5.5",
+    "mongoose-long": "^0.1.1",
     "morgan": "~1.6.1",
     "newrelic": "^1.24.0",
     "nodemon": "^1.9.1",
