--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "bower cache clean && bower install",
-    "test": "grunt simplemocha",
+    "test": "grunt simplemocha && grunt jshint",
     "prepush": "npm test && grunt nightwatch"
   },
   "engines": {
-    "node": "6.9.5"
+    "node": "^6.10.0"
   },
   "dependencies": {
     "async": "^1.5.0",
