--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "voxbone-generator",
-  "version": "2.0.0",
+  "name": "click2vox-com",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,7 +9,7 @@
     "prepush": "npm test && grunt nightwatch"
   },
   "engines": {
-    "node": "^6.11.0"
+    "node": "^6.11.1"
   },
   "dependencies": {
     "async": "^1.5.0",
@@ -22,7 +22,6 @@
     "connect-mongo": "^1.3.2",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-recaptcha": "^2.0.0",
     "express-session": "^1.12.1",
@@ -33,7 +32,7 @@
     "lodash": "^4.14.2",
     "method-override": "~1.0.0",
     "moment": "^2.14.1",
-    "mongoose": "~4.5.5",
+    "mongoose": "^4.11.1",
     "mongoose-long": "^0.1.1",
     "morgan": "~1.6.1",
     "newrelic": "^1.24.0",
@@ -56,6 +55,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "debug": "~2.2.0",
     "grunt": "^1.0.1",
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-bower-task": "^0.4.0",
