--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "click2vox-com",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -14,26 +14,25 @@
   "dependencies": {
     "async": "^1.5.0",
     "bcrypt-nodejs": "latest",
-    "body-parser": "~1.13.2",
-    "bower": "^1.8.2",
+    "body-parser": "^1.18.3",
+    "bower": "^1.8.4",
     "clipboard": "^1.5.3",
     "coffee-script": "^1.12.7",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1",
+    "express": "^4.16.3",
     "express-recaptcha": "^2.3.0",
     "express-session": "^1.15.6",
     "honeybadger": "^1.1.3",
-    "lodash": "^4.14.2",
-    "method-override": "~1.0.0",
-    "moment": "^2.19.2",
-    "mongoose": "^4.13.5",
+    "lodash": "^4.17.10",
+    "method-override": "^2.3.10",
+    "moment": "^2.22.1",
+    "mongoose": "^4.13.12",
     "mongoose-long": "^0.1.1",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.0",
     "newrelic": "^1.24.0",
-    "nodemon": "^1.12.1",
     "passport": "^0.3.0",
     "passport-github2": "^0.1.11",
     "passport-google-oauth": "^1.0.0",
@@ -41,9 +40,9 @@
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-windowslive": "^1.0.2",
-    "pug": "latest",
+    "pug": "^2.0.3",
     "repl": "^0.1.3",
-    "request": "^2.83.0",
+    "request": "^2.86.0",
     "requestify": "^0.2.3",
     "sendgrid": "^2.0.0",
     "strong-params": "^0.6.0",
@@ -51,22 +50,23 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "debug": "~2.2.0",
-    "grunt": "^1.0.1",
+    "debug": "^2.6.9",
+    "grunt": "^1.0.2",
     "grunt-bower-requirejs": "^2.0.0",
-    "grunt-bower-task": "^0.4.0",
+    "grunt-bower-task": "^0.5.0",
     "grunt-concurrent": "^2.3.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-nightwatch": "^0.5.3",
     "grunt-nodemon": "^0.4.2",
     "grunt-simple-mocha": "^0.4.1",
     "husky": "^0.11.6",
     "jit-grunt": "^0.10.0",
-    "mocha": "^3.5.3",
-    "nightwatch": "^0.9.16"
+    "mocha": "^5.1.1",
+    "nightwatch": "^1.0.6",
+    "nodemon": "^1.17.4"
   }
 }
